# madm-weighting-methods

./: README.md  data.csv  pyproject.toml  requirements.txt  run.py
internal/: data_structures.py  exporter.py  loader.py
internal/weighters/: __init__.py  base.py  eigenvector.py  least_sq.py
outputs/: eigen-vector.csv  least-sq.csv
