[tool.poetry]
name = "madm-weithing-methods"
version = "0.1.0"
description = ""
authors = ["MohammadAmin Vahedinia <mohammadamin@vahedinia.me>"]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^2.0.0"
numpy = "^1.19.4"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
